completed the work Experience page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
                     </div>
                 </div>
             </div>
+            <!-- page 1 and 2 -->
+            <div class="book-page page-right turn" id="turn-1">
+                <!-- page-1(work experience) -->
+                <div class="page-front">
+                    <h1 class="Title">Work Experience</h1>
+
+                    <div class="workedu-box">
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2020-2021</span>
+                            <h3>Web Devloper - Company</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi voluptates veniam officia rerum mollitia facere? Aspernatur deleniti nisi facere debitis impedit odit saepe ad fugit totam. Eaque velit officia eos.</p>
+                        </div>
+
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2021-2022</span>
+                            <h3>Web Devloper - Company</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
+                        </div>
+
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2022-2023</span>
+                            <h3>Web Devloper - Company</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
+                        </div>
+                    </div>
+                    <span class="number-page">1</span>
+
+                    <!-- next button -->
+                     <span class="nextprev-btn" data-page="turn-1">
+                        <i class="fa-solid fa-chevron-right"></i>
+                     </span>
+                </div>
+
+                <!-- page-2(education) -->
+                <div class="page-back">
+                <h1 class="Title">Education</h1>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
