--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                     <div class="workedu-box">
                         <div class="workedu-content">
                             <span class="year"><i class="fa-regular fa-calendar-days"></i> 2020-2021</span>
-                            <h3>Web Devloper - Company</h3>
+                            <h3>Master Degree - Unitversity</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi voluptates veniam officia rerum mollitia facere? Aspernatur deleniti nisi facere debitis impedit odit saepe ad fugit totam. Eaque velit officia eos.</p>
                         </div>
 
                         <div class="workedu-content">
                             <span class="year"><i class="fa-regular fa-calendar-days"></i> 2021-2022</span>
-                            <h3>Web Devloper - Company</h3>
+                            <h3>Master Degree - Unitversity</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
                         </div>
 
                         <div class="workedu-content">
                             <span class="year"><i class="fa-regular fa-calendar-days"></i> 2022-2023</span>
-                            <h3>Web Devloper - Company</h3>
+                            <h3>Master Degree - Unitversity</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
                         </div>
                     </div>
@@ -69,9 +69,110 @@
 
                 <!-- page-2(education) -->
                 <div class="page-back">
-                <h1 class="Title">Education</h1>
+                    <h1 class="Title">Education</h1>
+
+                    <div class="workedu-box">
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2020-2021</span>
+                            <h3>Master Degree - Unitversity</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi voluptates veniam officia rerum mollitia facere? Aspernatur deleniti nisi facere debitis impedit odit saepe ad fugit totam. Eaque velit officia eos.</p>
+                        </div>
+
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2021-2022</span>
+                            <h3>Master Degree - Unitversity</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
+                        </div>
+
+                        <div class="workedu-content">
+                            <span class="year"><i class="fa-regular fa-calendar-days"></i> 2022-2023</span>
+                            <h3>Master Degree - Unitversity</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae dolore officia excepturi nam, ratione numquam odit quas quam commodi quod in architecto fuga expedita ex cupiditate quasi obcaecati ad!</p>
+                        </div>
+                    </div>
+
+                    <span class="number-page">2</span>
+
+                    <!-- prev-button -->
+                     <span class="nextprev-btn back" data-page="turn-1">
+                        <i class="fa-solid fa-chevron-left"></i>
+                     </span>
                 </div>
             </div>
+
+            <!-- page 3 and 4 -->
+             <div class="book-page page-right turn" id="turn-2">
+                <div class="page-front">
+                    <h1 class="Title">My Services</h1>
+                    
+                    <div class="services-box">
+                        <div class="services-content">
+                            <i class="fa-solid fa-code"></i>
+                            <h3>Web Devlopment</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class="fa-solid fa-paintbrush"></i>
+                            <h3>Creative Design</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class="fa-solid fa-chart-simple"></i> 
+                            <h3>Digitial Design</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <h3>SEO</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <span class="number-page" style="bottom: .4rem;">3</span>
+
+                    <!-- next button -->
+                    <span class="nextprev-btn" data-page="turn-2">
+                        <i class="fa-solid fa-chevron-right"></i>
+                    </span>
+                </div>
+
+                <div class="page-back">
+                    <h1 class="Title">My Skills</h1>
+
+                    <div class="skills-content">
+                        <h3>Front-end</h3>
+                        <div class="content">
+                            <span><i class="fa-brands fa-html5"></i>HTML</span>
+                            <span><i class="fa-brands fa-css3-alt"></i>CSS</span>
+                            <span><i class="fa-brands fa-js"></i>JS</span>
+                            <span><i class="fa-brands fa-angular"></i>Angular</span>
+                            <span><i class="fa-brands fa-react"></i>React</span>
+                            <span><i class="fa-brands fa-bootstrap"></i>Bootstrap</span>
+                            <!-- <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M18.5 9.51a4.22 4.22 0 0 1-1.91-1.34A5.77 5.77 0 0 0 12 6a4.72 4.72 0 0 0-5 4 3.23 3.23 0 0 1 3.5-1.49 4.32 4.32 0 0 1 1.91 1.35A5.77 5.77 0 0 0 17 12a4.72 4.72 0 0 0 5-4 3.2 3.2 0 0 1-3.5 1.51zm-13 4.98a4.22 4.22 0 0 1 1.91 1.34A5.77 5.77 0 0 0 12 18a4.72 4.72 0 0 0 5-4 3.23 3.23 0 0 1-3.5 1.49 4.32 4.32 0 0 1-1.91-1.35A5.8 5.8 0 0 0 7 12a4.72 4.72 0 0 0-5 4 3.2 3.2 0 0 1 3.5-1.51z"></path></svg>Tailwind</span> -->
+                        </div>
+                    </div>
+
+                    <div class="skills-content">
+                        <h3>Back-end</h3>
+                        <div class="content">
+                            <span><i class="fa-brands fa-python"></i>Python</span>
+                            <span><i class="fa-brands fa-java"></i>JAVA</span>
+                            <span><i class="fa-brands fa-php"></i>PHP</span>
+                            <span><i class="fa-brands fa-node"></i>Node</span>
+                        </div>
+                    </div>
+
+                    <div class="skills-content">
+                        <h3>UI/UX Design</h3>
+                        <div class="content">
+                            <span><i class="fa-brands fa-figma"></i>Figma</span>
+                        </div>
+                    </div>
+                </div>
+             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
