constructed and styled contact me page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <!-- page 5&6 -->
-            <div class="book-page page-right" id="trun-3">
+            <div class="book-page page-right turn" id="trun-3">
                 <div class="page-front">
                     <h1 class="Title">Latest Project</h1>
 
@@ -210,6 +210,25 @@
 
                 <div class="page-back">
                     <h1 class="Title">Contact Me!</h1>
+                    
+                    <div class="contact-box">
+                        <form action="#">
+                            <input type="text" class="field" placeholder="Full Name" required>
+                            <input type="email" class="field" placeholder="Email Address" required>
+                            <textarea name="" id="" cols="30" rows="10" class="field" placeholder="Your Message" required></textarea>
+                            <input type="submit" class="btn" value="Send Message">
+                        </form>
+                    </div>
+                    <span class="number-page" style="bottom: 1rem">6</span>
+    
+                    <span class="nextprev-btn back" data-page="turn-3">
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </span>
+
+                    <a href="#" class="back-profile">
+                        <p>Profile</p>
+                        <i class="fa-solid fa-user"></i>
+                    </a>
                 </div>
             </div>
         </div>
