added pages and cover animation.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="cover cover-left"></div>
-        <div class="cover cover-right turn"></div>
+        <div class="cover cover-right"></div>
 
         <div class="book">
             <div class="book-page page-left">
@@ -30,7 +30,7 @@
 
                     <div class="btn-box">
                         <a href="#" class="btn">Download CV</a>
-                        <a href="#" class="btn contact">Contact Me</a>
+                        <a href="#" class="btn contact-me">Contact Me</a>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <!-- page 5&6 -->
-            <div class="book-page page-right turn" id="trun-3">
+            <div class="book-page page-right turn" id="turn-3">
                 <div class="page-front">
                     <h1 class="Title">Latest Project</h1>
 
